kubernetes/apps/dev/ironbridge/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ironbridge
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: ironbridge
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
